--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "vue": "^2.2.2",
-    "vue-router": "^2.2.0"
+    "vue-router": "^2.2.0",
+    "vue-upload-component": "^2.3.0-beta.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
