--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "bootstrap-vue": "^0.11.0",
+    "node-rest-client": "^3.1.0",
     "vue": "^2.2.2",
-    "vue-router": "^2.2.0",
-    "vue-upload-component": "^2.3.0-beta.2"
+    "vue-resource": "^1.2.1",
+    "vue-router": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
