--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "bootstrap-vue": "^0.11.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "node-rest-client": "^3.1.0",
     "vue": "^2.2.2",
     "vue-resource": "^1.2.1",
