--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "node-rest-client": "^3.1.0",
     "vue": "^2.2.2",
     "vue-resource": "^1.2.1",
